try to fix carousel height on iphone by setting min height in css

--- a/academicPhylogeny/static/css/style.css
+++ b/academicPhylogeny/static/css/style.css
@@ -137,3 +137,7 @@ rect:hover {
 .mainpageicon {
     font-size:40px;
 }
+
+.carousel {
+min-height: 330px;
+}
